Fixed: ContextMenu: Horizontal scrollbar

--- a/src/styles/themes/proton/sidebar/popup.context-menu.styl
+++ b/src/styles/themes/proton/sidebar/popup.context-menu.styl
@@ -256,7 +256,7 @@
 .CtxMenu .opt[data-separator="true"]
   padding: calc(var(--ctx-menu-opt-padding) - 2px) 0
   height: auto
-  width: calc(100% + 4px)
+  width: calc(100% + var(--ctx-menu-opt-padding))
   left: -2px
 .CtxMenu .opt[data-separator="true"]:after
   content: ''
